4.9_-- Dark Mode code--_ Fixing width & height open

--- a/src/App.css
+++ b/src/App.css
@@ -212,7 +212,7 @@ input:checked+.slider:before {
   text-align: right;
 }
 
-@media all and (max-width: 400px) {
+@media all and (max-width: 800px) {
   .logo{
     width: 400px;
     height: auto;
